@@ -31,6 +31,7 @@
 	flash9 : added @:meta(Meta(k="v")) support
 	all : improved #if support (fixed ! precedence)
 	all : lookup unqualified types in all package hierarchy and not only in current package
+	flash : set default flash version to 10 (-swf9 deprecated, use -swf-version 8 for avm1)
 
 2010-08-14: 2.06
 	neko : change serializer to be able to handle instances of basic classes from other modules
